clean up DataTypes methods